completed home page layout

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </section>
 
     <footer>
-      <p>Copyright ??? 2020</p>
+      <p>Copyright &copy; ChoreTracker 2020</p>
     </footer>
 
   </div>
