added about and contact pages

--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
 
  <!-- navigation code here -->
   <div class="navbar">
-    <img src="src/logo.png" alt="ChoreTracker logo with broom icon">
+    <a href="index.html"><img src="src/logo.png" alt="ChoreTracker logo with broom icon"></a>
+    
     <nav>
-      <a href="#index.html">Home</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
       <a id="signIn" href="#">Sign In</a>
     </nav>
   </div>
