added content to about page

--- a/contact.html
+++ b/contact.html
@@ -23,8 +23,10 @@
               <a id="signIn" href="#">Sign In</a>
             </nav>
         </div>
-
-
+        <header>
+            <img class="headerImg" src="src/header-img.jpg" alt="seven push mops against a red brick wall">
+        </header>
         
+
     </div>
 </body>
