--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 
 
 
-    <header class="intro">
+    <header>
        <!-- image code here -->
-      <img class="headerImg" src="src/header-img.jpg" alt="hand holding yellow cleaning spray bottle in front of blue background">
+      <img class="headerImg" src="src/header-img.jpg" alt="seven push mops against a red brick wall">
 
-      <h3>Do your children need motivation to help around the house?</h3>
+      <h1>Do your children need motivation to help around the house?</h1>
     
       <p>ChoreTracker turns boring, grueling housework into an interactive game that gets children excited about helping around the house. We've created this parenting tool to help teach your children responsibility, time management and independence.</p>
     </header>
