--- a/about.html
+++ b/about.html
@@ -25,6 +25,36 @@
             </nav>
           </div>
 
+          <header>
+            <img class="headerImg" src="src/header-img.jpg" alt="seven push mops against a red brick wall">
+            <h1>About Us</h1>
+            <p>We are a team of students studying Web Development at Lambda School. We came together to create a tool for parents, helping them teach their children to be responsible, self-sufficient, motivated and helpful!</p>
+        </header>
+
+        <div>
+            <h3>Product Lead</h3>
+            <img class="portrait" src="src/team/John.jpg" alt="Portrait of John Wells, product lead">
+        </div>
+
+        <div>
+            <h3>Backend Developer</h3>
+            <img class="portrait" src="src/team/Brittany.jpg" alt="Portrait of Brittany Isaacson, backend developer">
+        </div>
+
+        <div>
+            <h3>Senior React Developer</h3>
+            <img class="portrait" src="src/team/Michael.jpg" alt="Portrait of Michael Phelps, senior react developer">
+        </div>
+
+        <div>
+            <h3>Junior React Developer</h3>
+            <img class="portrait" src="src/team/Cedric.jpg" alt="Portrait of Cedric Winbush, junior react developer">
+        </div>
+
+        <div>
+            <h3>User Interface Developer</h3>
+            <img class="portrait" src="src/team/Jana.jpg" alt="Portrait of Jana Scheuble, user interface developer">
+        </div>
     </div>
     
 
