styled contact form

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
                 <h3>Product Lead</h3>
                 <img class="portrait" src="src/team/John.jpg" alt="Portrait of John Wells, product lead">
                 <h4>John Wells</h4>
-                <a href="#">View John's GitHub</a>
+                <a href="https://github.com/johngwells">View John's GitHub</a>
             </div>
     
             <div class="member">
