--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,33 @@
             <img class="headerImg" src="src/header-img.jpg" alt="seven push mops against a red brick wall">
         </header>
         
+        <form method="post">
+          <ul>
+            <li>
+              <label for="name">Name:</label>
+              <input name="name" id="name" type="text" placeholder="Jane Doe" required>
+            </li>
+            <li>
+              <label for="email">Email:</label>
+              <input name="email" id="email" type="email" placeholder="jane@doe.com" required>
+            </li>
+            <li>
+              <label for="message">Message:</label>
+              <textarea name="message" id="message"></textarea>
+            </li>
+            <li class="btn">
+              <a href="#">
+                <div class="btn">
+                Submit
+                </div>
+              </a>
+            </li>
+          </ul>
+        </form>
+
+        <footer>
+          <p>Copyright &copy; ChoreTracker 2020</p>
+        </footer>
 
     </div>
 </body>
