completed styling, aside from a few tweaks

--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
     </header>
 
     <section class="middleContent">
-      <div class="blocksImg">
-        <img src="src/blocks.jpg" alt="kid stacking colorful blocks">
+      <div class="imgs">
+        <img src="src/vacuum.jpg" alt="image of red vacuum cleaner on carpet">
+        <img id="dishes" src="src/dishes.jpg" alt="image of clean dishes in dish rack">
       </div>
 
       <div class="howItWorks">
