fixed layout issue on home page

--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
           </ul>
         </form>
 
-        <footer>
+        <footer id="contactFooter">
           <p>Copyright &copy; ChoreTracker 2020</p>
         </footer>
 
