updated react links

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
               <a href="index.html">Home</a>
               <a href="about.html">About</a>
               <a href="contact.html">Contact</a>
-              <a id="signIn" href="#">Sign In</a>
+              <a id="signIn" href="https://front-end-psi.now.sh/">Sign In</a>
             </nav>
           </div>
 
