--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
-      <a id="signIn" href="https://front-end-nezc68719.now.sh/login">Sign In</a>
+      <a id="signIn" href="https://front-end-psi.now.sh/">Sign In</a>
     </nav>
   </div>
 
@@ -56,7 +56,7 @@
         <h3>Get Started!</h3>
 
         <p>Start by registering a parent account. Then, you can create a ‘Family’ by registering child accounts within your parent account. Children can sign in under their own account, allowing parents to assign chores to specific child accounts. Children will have access to their current list of tasks, as well as their ChoreScore and CleanStreaks. They are able to easily upload a photo of their completed chores to increase their ChoreScore and compete against the other family members!</p>
-        <a href="https://front-end-nezc68719.now.sh/register">
+        <a href="https://front-end-psi.now.sh/">
           <div class="btn">
           Sign Up
           </div>
